<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/movieInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:layout_margin="3sp"
                app:cardCornerRadius="3sp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/title_image"
                        android:layout_width="110sp"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10sp"
                            android:ellipsize="end"
                            android:fontFamily="sans-serif"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/txt_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10sp"
                            android:drawableLeft="@drawable/review1"
                            android:drawablePadding="5sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2sp"
                            android:layout_marginLeft="5sp"
                            android:layout_marginRight="1sp"
                            android:layout_marginTop="40sp"
                            android:background="#e7e7e7" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/txt_calendar"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="5sp"
                                android:drawableLeft="@drawable/calendar"
                                android:drawablePadding="5sp"
                                android:gravity="center_vertical" />

                            <TextView
                                android:id="@+id/txt_people"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginRight="5sp"
                                android:drawablePadding="3sp"
                                android:drawableRight="@drawable/groups"
                                android:gravity="center_vertical|end" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3sp"
                app:cardCornerRadius="3sp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5sp"
                            android:clickable="true"
                            android:drawableTint="@android:color/black"
                            android:text="@string/trailer"
                            android:textColor="@android:color/black"
                            android:textSize="20sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2sp"
                            android:layout_marginRight="1sp"
                            android:background="#e7e7e7" />

                    </LinearLayout>

                    <HorizontalScrollView
                        android:id="@+id/youtubeholder"
                        android:layout_width="match_parent"
                        android:layout_height="120sp"
                        android:layout_marginTop="10sp">


                        <LinearLayout
                            android:id="@+id/Youtubelayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        </LinearLayout>

                    </HorizontalScrollView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/youtubeholder"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2sp"
                            android:layout_marginRight="1sp"
                            android:background="#e7e7e7" />

                        <TextView
                            android:id="@+id/YoutubeShare"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5sp"
                            android:text="@string/share"
                            android:textColor="@color/grey"
                            android:textSize="15sp" />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3sp"
                app:cardCornerRadius="3sp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/plot"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2sp"
                        android:layout_marginRight="1sp"
                        android:layout_marginTop="3sp"
                        android:background="#e7e7e7" />

                    <TextView
                        android:id="@+id/plot_synopsis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:fontFamily="sans-serif" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3sp"
                app:cardCornerRadius="3sp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/review"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2sp"
                        android:layout_marginRight="1sp"
                        android:layout_marginTop="3sp"
                        android:background="#e7e7e7" />

                    <TextView
                        android:id="@+id/txt_review"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:fontFamily="sans-serif" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16sp"
        android:background="@color/colorAccent"
        android:src="@drawable/right" />

</android.support.design.widget.CoordinatorLayout>